[project]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed research papers with non-academic authors affiliated with biotech/pharma companies."
authors = [
    {name = "Suvathy"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

# Tell Poetry what packages to include
packages = [
    { include = "get_papers_list" }
]
[project.scripts]
get-papers-list = "get_papers_list.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
